--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
   <link rel=icon href=/favicon.ico>
-  <title>前端基础框架2.0-体验版</title>
+  <title>前端基础框架2.0-体验版-beta</title>
   <link href=/openUse/assets/css/chunk-77e9d6a4.35742abc.css rel=prefetch>
   <link href=/openUse/assets/js/chunk-77e9d6a4.7cc322df.js rel=prefetch>
   <link href=/openUse/assets/css/app.54b27d22.css rel=preload as=style>
